--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         header {
             text-align: center;
             padding: 40px 20px 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #001630 100%);
             color: white;
             position: relative;
             z-index: 10;
@@ -127,7 +127,7 @@
         
         #scroll-progress {
             width: 100%;
-            background: #667eea;
+            background: #001630;
             border-radius: 2px;
             transition: height 0.1s ease;
             height: 0%;
