First draft done.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         .service-content h2 {
             font-size: clamp(1.8em, 4vw, 2.5em);
             margin-bottom: clamp(15px, 2vw, 20px);
-            color: #333;
+            color: #ffffff;
             font-weight: 300;
             transition: all 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             transform: translateX(0px) rotateX(0deg);
@@ -120,7 +120,7 @@
         .service-content p {
             font-size: clamp(1em, 1.8vw, 1.1em);
             margin-bottom: clamp(20px, 3vw, 30px);
-            color: #666;
+            color: #ffffff;
             line-height: 1.8;
             transition: all 1.0s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             transform: translateY(0px) scale(1);
@@ -167,7 +167,7 @@
         
         .service-content li {
             font-size: clamp(0.9em, 1.6vw, 1em);
-            color: #666;
+            color: #ffffff;
             margin-bottom: clamp(8px, 1.5vw, 12px);
             position: relative;
             padding-left: 25px;
@@ -233,14 +233,14 @@
             transform: translateY(-50%);
             width: 4px;
             height: 200px;
-            background: rgba(102, 126, 234, 0.2);
+            background: rgba(255, 255, 255, 0.511);
             border-radius: 2px;
             z-index: 100;
         }
         
         #scroll-progress {
             width: 100%;
-            background: #667eea;
+            background: #000000;
             border-radius: 2px;
             transition: height 0.1s ease;
             height: 0%;
